# rules_proto_grpc

./: .bazelrc  MODULE.bazel  README.md  WORKSPACE  repositories.bzl
.bazelci/: presubmit.yml
docs/lang/: rust.rst
example/: Makefile.mk
example/rust/rust_prost_proto_library/: WORKSPACE
internal/: common.bzl  compile.bzl
rust/: BUILD.bazel  rust_prost_proto_compile.bzl  rust_prost_proto_library.bzl  rust_proto_lib.bzl  rust_tonic_grpc_compile.bzl  rust_tonic_grpc_library.bzl
rust/crates/: BUILD.adler-1.0.2.bazel  BUILD.anyhow-1.0.57.bazel  BUILD.anyhow-1.0.58.bazel  BUILD.async-stream-0.3.3.bazel  BUILD.async-stream-impl-0.3.3.bazel  BUILD.async-trait-0.1.56.bazel  BUILD.axum-0.5.7.bazel  BUILD.axum-0.5.9.bazel  BUILD.axum-core-0.2.5.bazel  BUILD.axum-core-0.2.6.bazel  BUILD.bazel  BUILD.cmake-0.1.48.bazel  BUILD.crc32fast-1.3.2.bazel  BUILD.either-1.6.1.bazel  BUILD.fastrand-1.7.0.bazel  BUILD.fixedbitset-0.4.1.bazel  BUILD.flate2-1.0.24.bazel  BUILD.futures-0.3.21.bazel  BUILD.futures-channel-0.3.21.bazel  BUILD.futures-core-0.3.21.bazel  BUILD.futures-executor-0.3.21.bazel  BUILD.futures-io-0.3.21.bazel  BUILD.futures-macro-0.3.21.bazel  BUILD.futures-task-0.3.21.bazel  BUILD.futures-util-0.3.21.bazel  BUILD.getrandom-0.2.7.bazel  BUILD.h2-0.3.13.bazel  BUILD.http-0.2.8.bazel  BUILD.http-body-0.4.5.bazel  BUILD.httparse-1.7.1.bazel  BUILD.hyper-0.14.19.bazel  BUILD.hyper-timeout-0.4.1.bazel  BUILD.indexmap-1.8.2.bazel  BUILD.indexmap-1.9.1.bazel  BUILD.instant-0.1.12.bazel  BUILD.itertools-0.10.3.bazel  BUILD.libc-0.2.126.bazel  BUILD.log-0.4.17.bazel  BUILD.matchit-0.5.0.bazel  BUILD.memchr-2.5.0.bazel  (+63 more)
rust/example/routeguide/: BUILD.bazel  client.rs  data.rs  server.rs
rust/raze/: BUILD.bazel  Cargo.toml  crates.bzl
rust/raze/remote/: BUILD.adler-1.0.2.bazel  BUILD.anyhow-1.0.57.bazel  BUILD.async-stream-0.3.3.bazel  BUILD.async-stream-impl-0.3.3.bazel  BUILD.async-trait-0.1.56.bazel  BUILD.autocfg-1.1.0.bazel  BUILD.axum-0.5.7.bazel  BUILD.axum-core-0.2.5.bazel  BUILD.base64-0.13.0.bazel  BUILD.bitflags-1.3.2.bazel  BUILD.bytes-1.1.0.bazel  BUILD.cc-1.0.73.bazel  BUILD.cfg-if-1.0.0.bazel  BUILD.cmake-0.1.48.bazel  BUILD.crc32fast-1.3.2.bazel  BUILD.either-1.6.1.bazel  BUILD.fastrand-1.7.0.bazel  BUILD.fixedbitset-0.4.1.bazel  BUILD.flate2-1.0.24.bazel  BUILD.fnv-1.0.7.bazel  BUILD.futures-0.3.21.bazel  BUILD.futures-channel-0.3.21.bazel  BUILD.futures-core-0.3.21.bazel  BUILD.futures-executor-0.3.21.bazel  BUILD.futures-io-0.3.21.bazel  BUILD.futures-macro-0.3.21.bazel  BUILD.futures-sink-0.3.21.bazel  BUILD.futures-task-0.3.21.bazel  BUILD.futures-util-0.3.21.bazel  BUILD.getrandom-0.2.7.bazel  BUILD.h2-0.3.13.bazel  BUILD.hashbrown-0.11.2.bazel  BUILD.heck-0.4.0.bazel  BUILD.http-0.2.8.bazel  BUILD.http-body-0.4.5.bazel  BUILD.http-range-header-0.3.0.bazel  BUILD.httparse-1.7.1.bazel  BUILD.httpdate-1.0.2.bazel  BUILD.hyper-0.14.19.bazel  BUILD.hyper-timeout-0.4.1.bazel  (+75 more)
tools/rulegen/: rust.go
