module(name = "rules_proto_grpc", version = "4.1.0-b1")

bazel_dep(name = "rules_cc", version = "0.0.8")
bazel_dep(name = "rules_proto", version = "5.3.0-21.7")
bazel_dep(name = "rules_rust", version = "0.27.0")
bazel_dep(name = "rules_python", version = "0.25.0")
bazel_dep(name = "bazel_skylib", version = "1.4.2")
bazel_dep(name = "protobuf", version = "21.7", repo_name = "com_google_protobuf")
bazel_dep(name = "subpar", version = "2.0.0")
