load("//:defs.bzl", "proto_plugin")

proto_plugin(
    name = "rust_prost_plugin",
    exclusions = [
        "google/protobuf",
    ],
    outputs = ["{basename}.rs"],
    tool = "//rust/raze:cargo_bin_protoc_gen_prost",
    visibility = ["//visibility:public"],
)

proto_plugin(
    name = "rust_tonic_plugin",
    exclusions = [
        "google/protobuf",
    ],
    options = ["no_insert_include"],
    outputs = ["{basename}.tonic.rs"],
    tool = "//rust/raze:cargo_bin_protoc_gen_tonic",
    visibility = ["//visibility:public"],
)
