load("//:defs.bzl", "proto_plugin")
load("@rules_rust//crate_universe:defs.bzl", "crate", "crates_vendor")

proto_plugin(
    name = "rust_prost_plugin",
    exclusions = [
        "google/protobuf",
    ],
    # output_directory = True,
    outputs = ["{basename}.rs"],
    # empty_template="hello",
    tool = "@crate_index//:protoc-gen-prost__protoc-gen-prost",
    visibility = ["//visibility:public"],
)

proto_plugin(
    name = "rust_tonic_plugin",
    exclusions = [
        "google/protobuf",
    ],
    options = ["no_include=true"],
    # output_directory = True,
    # empty_template="hello",
    outputs = ["{basename}.tonic.rs"],
    tool = "@crate_index//:protoc-gen-tonic__protoc-gen-tonic",
    visibility = ["//visibility:public"],
)

crates_vendor(
    name = "crates_vendor",
    annotations = {
        "prost-build": [crate.annotation(
            build_script_env = {
                "PROTOC_NO_VENDOR": "true",
                "PROTOC": "$(execpath @com_google_protobuf//:protoc)",
                "PROTOC_INCLUDE": ".",
            },
            build_script_tools = ["@com_google_protobuf//:protoc"],
        )],
    },
    mode = "remote",
    packages = {
        "protoc-gen-prost": crate.spec(
            git = "https://github.com/titanous/protoc-gen-prost",
            rev = "706af00ca1df7a8b2f2d77d2bac749144e584e7c",
        ),
        "protoc-gen-tonic": crate.spec(
            git = "https://github.com/titanous/protoc-gen-prost",
            rev = "706af00ca1df7a8b2f2d77d2bac749144e584e7c",
        ),
        "prost": crate.spec(
            version = "0.10.4",
        ),
        "prost-derive": crate.spec(
            version = "0.10.1",
        ),
        "prost-types": crate.spec(
            version = "0.10.1",
        ),
        "tonic": crate.spec(
            features = ["compression"],
            version = "0.7.2",
        ),
        "tonic-build": crate.spec(
            features = [
                "prost",
                "compression",
            ],
            version = "0.7.2",
        ),

        # routeguide example deps
        "serde": crate.spec(
            features = ["derive"],
            version = "1.0.81",
        ),
        "serde_json": crate.spec(
            version = "1.0.81",
        ),
        "rand": crate.spec(
            version = "0.8.5",
        ),
        "tokio": crate.spec(
            version = "1.19.2",
        ),
        "tokio-stream": crate.spec(
            version = "0.1.9",
        ),
        "async-stream": crate.spec(
            version = "0.3.3",
        ),
        "futures": crate.spec(
            version = "0.3.21",
        ),
    },
    repository_name = "crate_index",
    tags = ["manual"],
    vendor_path = "crates",
)
