[package]
name = "compile_with_bazel"
version = "0.0.0"

# Mandatory (or Cargo tooling is unhappy)
[lib]
path = "lib.rs"

[dependencies]
protoc-gen-prost = { git = "https://github.com/titanous/protoc-gen-prost", branch = "add-flag-no-insert-include" }
protoc-gen-tonic = { git = "https://github.com/titanous/protoc-gen-prost", branch = "add-flag-no-insert-include" }
prost = "=0.10.4"
prost-derive = "=0.10.1"
prost-types = "=0.10.1"
tonic = { version = "=0.7.2", features = ["compression"] }
tonic-build = { version = "=0.7.2", features = ["prost", "compression"] }

# For routeguide example
serde = { version = "=1.0.137", features = ["derive"] }
serde_json = "=1.0.81"
rand = "=0.8.5"
tokio = "=1.19.2"
tokio-stream = "=0.1.9"
async-stream = "=0.3.3"
futures = "=0.3.21"

[package.metadata.raze]
genmode = "Remote"
workspace_path = "//rust/raze"
output_buildfile_suffix = "BUILD.bazel"
package_aliases_dir = "."
default_gen_buildrs = true
rust_rules_workspace_name = "rules_rust"


# Plugins
[package.metadata.raze.crates.protoc-gen-prost.'*']
extra_aliased_targets = ["cargo_bin_protoc_gen_prost"]
compile_data_attr = 'glob(["**/README.md"])'

[package.metadata.raze.crates.protoc-gen-tonic.'*']
extra_aliased_targets = ["cargo_bin_protoc_gen_tonic"]
compile_data_attr = 'glob(["**/README.md"])'

[package.metadata.raze.crates.libc.'*']
gen_buildrs = true

[package.metadata.raze.crates.prost-build.'*']
build_data_dependencies = ["@com_google_protobuf//:protoc"]

[package.metadata.raze.crates.prost-build.'*'.buildrs_additional_environment_variables]
PROTOC_NO_VENDOR = "true"
PROTOC = "$(execpath @com_google_protobuf//:protoc)"
PROTOC_INCLUDE = "."

[package.metadata.raze.crates.axum.'*']
compile_data_attr = 'glob(["src/docs/**"])'