load("//rust:rust_tonic_grpc_library.bzl", "rust_tonic_grpc_library")
load("@rules_rust//rust:defs.bzl", "rust_binary")

rust_tonic_grpc_library(
    name = "routeguide",
    options = {
        "//rust:rust_prost_plugin": ["type_attribute=.routeguide.Point=#[derive(Eq\\,Hash)]"],
    },
    protos = ["//example/proto:routeguide_proto"],
)

rust_binary(
    name = "client",
    srcs = [
        "client.rs",
    ],
    data = ["//example/proto:routeguide_features"],
    edition = "2018",
    visibility = ["//example/routeguide:__pkg__"],
    deps = [
        ":routeguide",
        "@rules_proto_grpc//rust/raze:async_stream",
        "@rules_proto_grpc//rust/raze:futures",
        "@rules_proto_grpc//rust/raze:rand",
        "@rules_proto_grpc//rust/raze:tokio",
        "@rules_proto_grpc//rust/raze:tonic",
    ],
)

rust_binary(
    name = "server",
    srcs = [
        "data.rs",
        "server.rs",
    ],
    data = ["//example/proto:routeguide_features"],
    edition = "2018",
    visibility = ["//example/routeguide:__pkg__"],
    deps = [
        ":routeguide",
        "@rules_proto_grpc//rust/raze:async_stream",
        "@rules_proto_grpc//rust/raze:futures",
        "@rules_proto_grpc//rust/raze:serde",
        "@rules_proto_grpc//rust/raze:serde_json",
        "@rules_proto_grpc//rust/raze:tokio",
        "@rules_proto_grpc//rust/raze:tokio_stream",
        "@rules_proto_grpc//rust/raze:tonic",
    ],
)
