load("//rust:rust_tonic_grpc_library.bzl", "rust_tonic_grpc_library")
load("@rules_rust//rust:defs.bzl", "rust_binary")

rust_tonic_grpc_library(
    name = "routeguide",
    options = {
        "//rust:rust_prost_plugin": ["type_attribute=.routeguide.Point=#[derive(Eq\\,Hash)]"],
    },
    protos = ["//example/proto:routeguide_proto"],
)

rust_binary(
    name = "client",
    srcs = [
        "client.rs",
    ],
    data = ["//example/proto:routeguide_features"],
    edition = "2018",
    visibility = ["//example/routeguide:__pkg__"],
    deps = [
        ":routeguide",
        "@crate_index//:async-stream",
        "@crate_index//:futures",
        "@crate_index//:rand",
        "@crate_index//:tokio",
        "@crate_index//:tonic",
    ],
)

rust_binary(
    name = "server",
    srcs = [
        "data.rs",
        "server.rs",
    ],
    data = ["//example/proto:routeguide_features"],
    edition = "2018",
    visibility = ["//example/routeguide:__pkg__"],
    deps = [
        ":routeguide",
        "@crate_index//:async-stream",
        "@crate_index//:futures",
        "@crate_index//:serde",
        "@crate_index//:serde_json",
        "@crate_index//:tokio",
        "@crate_index//:tokio-stream",
        "@crate_index//:tonic",
    ],
)
